tests/neg/transparent-override/A_1.scala
abstract class A {
   def f(x: Int): Int
   inline def g(x: Int): Int = x
}



